// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Skeleton > renders circle (forces width to height) 1`] = `
<rn-View
  className="bg-muted"
  style={
    [
      {
        "borderRadius": 24,
        "height": 48,
        "width": 48,
      },
      {
        "opacity": 0.35,
      },
      undefined,
    ]
  }
/>
`;

exports[`Skeleton > renders default block 1`] = `
<rn-View
  className="bg-muted"
  style={
    [
      {
        "borderRadius": 6,
        "height": 16,
        "width": "100%",
      },
      {
        "opacity": 0.35,
      },
      undefined,
    ]
  }
/>
`;

exports[`Skeleton > renders fixed width + height 1`] = `
<rn-View
  className="bg-muted"
  style={
    [
      {
        "borderRadius": 6,
        "height": 24,
        "width": 120,
      },
      {
        "opacity": 0.35,
      },
      undefined,
    ]
  }
/>
`;

exports[`Skeleton > respects radius override 1`] = `
<rn-View
  className="bg-muted"
  style={
    [
      {
        "borderRadius": 12,
        "height": 20,
        "width": "100%",
      },
      {
        "opacity": 0.35,
      },
      undefined,
    ]
  }
/>
`;

exports[`SkeletonRow > renders children inside a flex-row container 1`] = `
<rn-View
  className="flex-row items-center gap-3"
>
  <rn-View
    className="bg-muted"
    style={
      [
        {
          "borderRadius": 20,
          "height": 40,
          "width": 40,
        },
        {
          "opacity": 0.35,
        },
        undefined,
      ]
    }
  />
  <rn-View
    className="bg-muted"
    style={
      [
        {
          "borderRadius": 6,
          "height": 16,
          "width": "100%",
        },
        {
          "opacity": 0.35,
        },
        undefined,
      ]
    }
  />
</rn-View>
`;
